# jax-healpy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yml
benchmarks/: __main__.py  script_sphtfunc.py
jax_healpy/: __init__.py  pixelfunc.py  sphtfunc.py
jax_healpy/clustering/: _clustering.py  _kmeans.py
tests/: conftest.py
tests/clustering/: test_kmeans.py
tests/data/: GAL_PlanckMasks_64.npz
tests/pixelfunc/: conftest.py  test.py  test_ang_pix.py  test_ang_vec.py  test_ring_nest.py  test_vec_pix.py
tests/sphtfunc/: conftest.py  test_map_alm.py
